<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="48dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/textLoanAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:paddingVertical="15dp"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/loanAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loan_amount"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/textInterestRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:paddingVertical="15dp"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/interestRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interest_rate"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/textLoanTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:paddingVertical="15dp"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/loanTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loan_term"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/textLoanFees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:paddingVertical="15dp"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/loanFees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loan_fees"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="Calculate" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_interest"
                    android:textAlignment="textEnd"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewTotalInterest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:textAlignment="textStart"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monthly_payment"
                    android:textAlignment="textEnd"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewMonthlyPayment"
                    android:layout_width="194dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:textAlignment="textStart"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>